fixed accessible parking text + added lot color and fixed text clipping

--- a/index.css
+++ b/index.css
@@ -20,33 +20,58 @@ body {
 
 .map-container {
   position: relative;
-  display: flex;
+  display: inline-block;
+  width: 95%;
   max-width: 1100px;
-  margin: 0.5rem 0 0 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: .5rem;
   border: 0.125rem solid #444;
   border-radius: 0.5rem;
+
 }
 
 .map-container img {
+  
   margin: 1.5rem 0 1.5rem 0;
   width: 100%;
   height: auto;
-  display: flex;
+  display: block;
   object-fit: cover;
 }
 .map-container-text {
   position: absolute; 
-  width: 25%; 
+  width: 75%; 
+  height: 10%;
   display: flex;
   flex-direction: column;
-  justify-content: left;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
+  /* overflow: auto; */
   padding: 0.5rem;
-  margin-right: 1.5rem;
-  top:8%;
-  left: 28%;
+  top:16%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.2em;
 }
-
+.map-container-text-lots{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: flex-start;
+}
+.map-container-text-lot1{
+  color: #007bff;
+}
+.map-container-text-lot2{
+  color: #17a2b8;
+}
+.map-container-text-lot3{
+  color: #ffc107;
+}
+.map-container-text-lot4{
+  color: #28a745;
+}
 .lots {
   position: absolute;
   transform: translate(-50%, -50%);
@@ -97,7 +122,6 @@ body {
   flex: 1;
   border: 0.125rem solid #dc3545;
   border-radius: 0.5rem;
-  background: #fff;
   padding: 1rem;
   font-size: 1rem;
   line-height: 1.5;
@@ -105,6 +129,13 @@ body {
   text-align: left;
   margin: 0.5rem 0 0 1rem;
   max-width: 20vw;
+}
+#directions-box h3{
+  text-align: center;
+}
+#directions-box em{
+  text-align: center;
+  display: block;
 }
 @media (max-width: 768px) {
   #directions-box {
